examples/test/testpolicy17005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17005
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key11: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value20
      podSelector:
        matchLabels:
          key47: value9
          key18: value28
          key5: value47
